--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
         💬 WhatsApp
     </a>
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1Z17G71B2J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1Z17G71B2J');
+</script>
+
 </body>
 
 </html>
