--- a/index.html
+++ b/index.html
@@ -76,13 +76,15 @@
 
     <!-- Características destacadas de GymApp -->
     <section class="py-20 bg-black text-white">
-     <h2 class="text-4xl font-extrabold text-center mb-12 bg-clip-text text-transparent 
-           bg-gradient-to-r from-green-600 via-green-500 to-green-600 
-           animate-pulse 
-           drop-shadow-lg">
-           Características destacadas de <span class="text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-green-500 to-green-600">GymApp</span>
-</h2>
-
+      <h2
+        class="text-4xl font-extrabold text-center mb-12 bg-clip-text text-transparent bg-gradient-to-r from-green-600 via-green-500 to-green-600 animate-pulse drop-shadow-lg"
+      >
+        Características destacadas de
+        <span
+          class="text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-green-500 to-green-600"
+          >GymApp</span
+        >
+      </h2>
 
       <!-- Tarjetas animadas -->
       <section
@@ -485,29 +487,99 @@
         </div>
       </div>
     </section>
-
-    <div class="p-6">
+    <div
+      class="flex flex-col lg:flex-row items-center justify-center gap-8 p-6"
+    >
+      <!-- Card: Funcionalidad -->
       <div
-        class="relative bg-gradient-to-r from-green-600/30 to-green-500/40 border-2 border-green-400 rounded-xl shadow-[0_0_15px_3px_rgba(34,197,94,0.4)] p-8 backdrop-blur-md animate__animated animate__fadeInUp animate__delay-6s max-w-lg mx-auto"
+        class="w-full max-w-md bg-gradient-to-r from-green-600/30 to-green-500/40 border-2 border-green-400 rounded-2xl shadow-[0_0_15px_3px_rgba(34,197,94,0.4)] p-8 backdrop-blur-md animate__animated animate__fadeInUp animate__delay-4s"
       >
         <!-- Título -->
-        <h3
-          class="text-2xl font-extrabold text-green-200 flex items-center gap-3 drop-shadow-md"
-        >
+        <div class="flex items-center gap-3 mb-4">
           <i class="fas fa-qrcode text-green-400 text-3xl animate-pulse"></i>
-          Registro de asistencias con QR o ID
-        </h3>
+          <h3 class="text-2xl font-extrabold text-green-200 drop-shadow-md">
+            Registro con QR o ID
+          </h3>
+        </div>
 
         <!-- Descripción -->
-        <p
-          class="mt-3 text-green-100/90 text-lg leading-relaxed drop-shadow-sm"
-        >
+        <p class="text-green-100/90 text-lg leading-relaxed drop-shadow-sm">
           Escaneá el <strong class="text-green-300">código QR</strong> o ingresá
           el <strong class="text-green-300">ID único</strong> del cliente para
-          registrar la asistencia de forma rápida, precisa y segura.
+          registrar la asistencia de forma rápida, precisa y sin contacto.
         </p>
       </div>
+
+      <!-- Card: Plan de Precio -->
+     <div class="w-full max-w-md bg-gradient-to-br from-emerald-700/30 to-lime-500/20 border border-emerald-400/40 rounded-2xl shadow-xl backdrop-blur-md p-8 text-white animate__animated animate__fadeInUp animate__delay-6s relative overflow-hidden">
+
+  <!-- Cinta Popular -->
+  <div class="absolute -top-1 -left-3 bg-yellow-400 text-black text-xs font-bold px-3 py-1 rounded-tr-lg rounded-bl-lg shadow-md">
+    🔥 Aprovecha
+  </div>
+
+  <!-- Encabezado -->
+  <div class="flex items-center gap-3 mb-4">
+    <i class="fas fa-star text-yellow-300 text-2xl animate-pulse"></i>
+    <h3 class="text-2xl font-bold tracking-wide text-lime-200 drop-shadow-md">
+      Plan completo GymApp
+    </h3>
+  </div>
+
+  <!-- Precio -->
+  <div class="text-4xl font-extrabold text-white mb-2">$130 USD</div>
+  <p class="text-white/80 text-sm mb-6 italic">
+    Soporte gratuito por 6 meses incluido
+  </p>
+
+  <!-- Beneficios -->
+  <ul class="space-y-3 text-white/90 text-sm">
+    <li class="flex items-start gap-2">
+      <i class="fas fa-check-circle text-green-400"></i>
+      Instalación completa del sistema
+    </li>
+    <li class="flex items-start gap-2">
+      <i class="fas fa-check-circle text-green-400"></i>
+      Capacitación personalizada y práctica
+    </li>
+    <li class="flex items-start gap-2">
+      <i class="fas fa-check-circle text-green-400"></i>
+      Acceso completo al panel administrativo
+    </li>
+    <li class="flex items-start gap-2">
+      <i class="fas fa-check-circle text-green-400"></i>
+      Personalización visual con tu logo etc
+    </li>
+    <li class="flex items-start gap-2">
+      <i class="fas fa-check-circle text-green-400"></i>
+      Registro de asistencias por QR e ID
+    </li>
+    <li class="flex items-start gap-2">
+      <i class="fas fa-check-circle text-green-400"></i>
+      Soporte técnico directo por WhatsApp
+    </li>
+    <li class="flex items-start gap-2">
+      <i class="fas fa-check-circle text-green-400"></i>
+      Acceso a futuras actualizaciones menores
+    </li>
+  </ul>
+
+  <!-- CTA -->
+  <div class="mt-8">
+   
+      <a
+        href="https://wa.me/50585429144"
+        target="_blank"
+       class="w-full p-6 bg-green-500 hover:bg-green-600 text-white font-bold py-3 rounded-xl shadow-md transition duration-200 ease-in-out"
+      >
+         Solicitar ahora
+      </a>
+  </div>
+
+</div>
+
     </div>
+
     <!-- CTA Final -->
     <section class="text-center py-20 bg-gradient-to-r from-gray-900 to-black">
       <h3 class="text-3xl font-bold mb-4">💰 Licencia única por instalación</h3>
