--- a/index.html
+++ b/index.html
@@ -806,7 +806,20 @@
 
       gtag("config", "G-1Z17G71B2J");
     </script>
+
+    <!-- Hotjar Tracking Code for Sitio 6455607 (falta el nombre) -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:6455607,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
   </body>
+
 
   <script>
     function openLightbox(src) {
